<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.implicitintentpractice.MainActivity">


    <EditText
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_website"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt1"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/txt1"
        android:layout_toRightOf="@+id/txt1"
        android:onClick="openWebsite"
        android:text="@string/search" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt1"
        android:layout_alignStart="@+id/txt1"
        android:layout_below="@+id/txt1"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/enter_location"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt2"
        android:layout_alignEnd="@+id/btn1"
        android:layout_alignRight="@+id/btn1"
        android:onClick="openLocation"
        android:text="@string/find" />

    <EditText
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt2"
        android:layout_alignStart="@+id/txt2"
        android:layout_below="@+id/txt2"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/enter_text"
        />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt3"
        android:layout_alignEnd="@+id/btn2"
        android:layout_alignRight="@+id/btn2"
        android:onClick="shareText"
        android:text="@string/share" />

    <EditText
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt3"
        android:layout_alignStart="@+id/txt3"
        android:layout_below="@+id/txt3"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/enter_phone_no"
         />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt4"
        android:layout_alignEnd="@+id/btn3"
        android:layout_alignRight="@+id/btn3"
        android:onClick="makeCall"
        android:text="@string/call" />
    <EditText
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt4"
        android:layout_alignStart="@+id/txt4"
        android:layout_below="@+id/txt4"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="Enter recipient"
        />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt5"
        android:layout_alignEnd="@+id/btn4"
        android:layout_alignRight="@+id/btn4"
        android:onClick="sendMsg"
        android:text="@string/sms" />

    <Button
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_a_photo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:onClick="photoClick"/>
</RelativeLayout>
